--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %svelte.head%
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Mobile & SEO Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#1a202c" />
+    <meta name="description" content="Narrative wedding films for couples who value memory, emotion, and storytelling." />
+    <meta property="og:title" content="Abundant Wedding Films" />
+    <meta property="og:description" content="Cinematic wedding films with heart." />
+    <meta property="og:image" content="/og-cover.jpg" />
+    <meta property="og:type" content="website" />
+
+    <title>Abundant Wedding Films</title>
   </head>
+
   <body>
-    <div id="svelte">%svelte.body%</div>
+    <div id="svelte">Loading...</div>
   </body>
 </html>
