--- a/src/app.html
+++ b/src/app.html
@@ -4,19 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
 
-    <!-- Mobile & SEO Meta -->
+    <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1a202c" />
-    <meta name="description" content="Narrative wedding films for couples who value memory, emotion, and storytelling." />
-    <meta property="og:title" content="Abundant Wedding Films" />
-    <meta property="og:description" content="Cinematic wedding films with heart." />
-    <meta property="og:image" content="/og-cover.jpg" />
+    <meta name="description" content="Narrative wedding films for couples who value emotion, memory, and story." />
+    <meta property="og:title" content="Wedding Films | Cinematic Love Stories" />
+    <meta property="og:description" content="Relive the emotion, elegance, and energy of your wedding day with cinematic films." />
+    <meta property="og:image" content="https://your-vercel-site.com/og-cover.jpg" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-vercel-site.com" />
 
-    <title>Abundant Wedding Films</title>
+    <title>Wedding Films | Cinematic Love Stories</title>
   </head>
 
   <body>
-    <div id="svelte">Loading...</div>
+    <div id="svelte">Loading…</div>
   </body>
 </html>
